# ADLD_track_hub

./: .gitignore  build.sh  check.sh  pyproject.toml  vars.sh
data/: data.bed  data.xlsx
data/hg38/: trackDb.txt
data/tables/: meta.yaml
data/tables/clinical/: meta.yaml  schema.py
data/tables/evidence/: meta.yaml  schema.py
data/tables/molecular/: data.csv  meta.yaml  schema.py
data/tables/publication/: meta.yaml  schema.py
hub/: genomes.txt  hub.txt
hub/hg38/: features.as  features.bb  trackDb.txt
src/adld_track_hub/: cli.py
src/adld_track_hub/utils/: models.py
