[project]
authors = [{name = "Shane Buckley", email = "tshanebuckley@gmail.com"}]
dependencies = []
name = "ADLD_track_hub"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
adld_track_hub = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.taskipy.tasks]
build = "bash build.sh 'hg38'"
clear = "rm -rf '$PIXI_PROJECT_ROOT/.cache'"
check = "bash check.sh 'hg38'"

[tool.pixi.dependencies]
ucsc-bedtobigbed = ">=482,<483"
ucsc-fetchchromsizes = ">=482,<483"
taskipy = ">=1.14.1,<2"
ucsc-bigbedtobed = ">=482,<483"


